--- a/server/package.json
+++ b/server/package.json
@@ -24,5 +24,8 @@
     "nodemon": "^3.1.10",
     "otp-generator": "^4.0.1",
     "razorpay": "^2.9.6"
+  },
+  "devDependencies": {
+    "vite": "^7.0.3"
   }
 }
