--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-otp-input": "^3.1.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.3",
+    "react-stars": "^2.2.5",
     "react-type-animation": "^3.2.0",
     "redux-toolkit": "^1.1.2"
   },
