--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,16 +13,19 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.2.0",
+    "@mui/material": "^7.3.0",
     "@ramonak/react-progress-bar": "^5.4.0",
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.10.0",
     "express": "^5.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.60.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-otp-input": "^3.1.1",
+    "react-player": "^3.3.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.3",
     "react-stars": "^2.2.5",
