--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-markdown": "^10.1.0",
     "react-otp-input": "^3.1.1",
     "react-player": "^3.3.1",
+    "react-rating-stars-component": "^2.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.3",
     "react-stars": "^2.2.5",
