--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,7 +35,8 @@
     "react-super-responsive-table": "^6.0.2",
     "react-type-animation": "^3.2.0",
     "redux-toolkit": "^1.1.2",
-    "swiper": "^11.2.10"
+    "swiper": "^11.2.10",
+    "video-react": "^0.16.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
