--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,9 +17,11 @@
     "@ramonak/react-progress-bar": "^5.4.0",
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.10.0",
+    "chart.js": "^4.5.0",
     "copy-to-clipboard": "^3.3.3",
     "express": "^5.1.0",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.60.0",
