--- a/server/env.sample
+++ b/server/env.sample
@@ -1,26 +1,23 @@
 MAIL_HOST = smtp.gmail.com
 MAIL_USER = rishabhgzp2004@gmail.com
-MAIL_PASS = wrcsbinpnzogqjis
-# MAIL_HOST=smtp.gmail.com
-# MAIL_USER=rp031776@gmail.com
-# MAIL_PASS=nqzhhqbhvzkrnprp
-# "otp": "635692"
+MAIL_PASS = mail-pass
+
 
 JWT_SECRET = "rishabh"
 FOLDER_NAME = "Codehelp"
 
 RAZORPAY_KEY = rzp_test_U5qAfuwInSdmQY
 
-RAZORPAY_SECRET = Rcd0XAODb20DNx8kIKqSkfpF
+RAZORPAY_SECRET = razor-secret
 
-# //CLOUDINARY_URL=cloudinary://<your_api_key>:<your_api_secret>@dwdy42sfk
+
 CLOUD_NAME =  dwdy42sfk
 API_KEY = 694711724953211
-API_SECRET = fLNQVeZD3lhB0XSK1lHsYoWB-Z4
-# //XbNoIhM2jYVWvYRV
+API_SECRET = api-sec
 
-MONGODB_URL = "mongodb+srv://rishabhgzp2004:xr54LAqPFYXseek1@cluster0.gfklmmz.mongodb.net/upskillhub"
+
+MONGODB_URL = "mongodb+srv://rishabhgzp2004:<your-pass>@cluster0.gfklmmz.mongodb.net/upskillhub"
 PORT = 4000
 
-# xr54LAqPFYXseek1
+
 
